--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tesla-inventory-checker",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://guglio.github.io/inventory-checker/"
   "dependencies": {
     "@mui/material": "^5.0.1",
     "@mui/x-data-grid": "^4.0.0",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "express-http-proxy": "^1.6.2"
+    "express-http-proxy": "^1.6.2",
+    "gh-pages": "^3.2.3"
   }
 }
