--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tesla-inventory-checker",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://guglio.github.io/inventory-checker/"
+  "homepage":"https://guglio.github.io/inventory-checker/",
   "dependencies": {
     "@mui/material": "^5.0.1",
     "@mui/x-data-grid": "^4.0.0",
