--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tesla-inventory-checker",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://guglio.github.io/inventory-checker/",
+  "homepage": "https://guglio.github.io/inventory-checker",
   "dependencies": {
     "@mui/material": "^5.0.1",
     "@mui/x-data-grid": "^4.0.0",
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-table": "^7.7.0",
     "web-vitals": "^1.0.1"
@@ -22,7 +23,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
